# gen/js/onehub/v1/models_pb.js
@@ -1,4 +1,4 @@
-// @generated by protoc-gen-es v1.3.0
+// @generated by protoc-gen-es v1.10.0
 // @generated from file onehub/v1/models.proto (package onehub.v1, syntax proto3)
 /* eslint-disable */
 // @ts-nocheck
@@ -8,7 +8,7 @@ import { proto3, Struct, Timestamp } from "@bufbuild/protobuf";
 /**
  * @generated from message onehub.v1.User
  */
-export const User = proto3.makeMessageType(
+export const User = /*@__PURE__*/ proto3.makeMessageType(
   "onehub.v1.User",
   () => [
     { no: 1, name: "created_at", kind: "message", T: Timestamp },
@@ -25,7 +25,7 @@ export const User = proto3.makeMessageType(
  *
  * @generated from message onehub.v1.Topic
  */
-export const Topic = proto3.makeMessageType(
+export const Topic = /*@__PURE__*/ proto3.makeMessageType(
   "onehub.v1.Topic",
   () => [
     { no: 1, name: "created_at", kind: "message", T: Timestamp },
@@ -43,7 +43,7 @@ export const Topic = proto3.makeMessageType(
  *
  * @generated from message onehub.v1.Message
  */
-export const Message = proto3.makeMessageType(
+export const Message = /*@__PURE__*/ proto3.makeMessageType(
   "onehub.v1.Message",
   () => [
     { no: 1, name: "created_at", kind: "message", T: Timestamp },
@@ -54,6 +54,36 @@ export const Message = proto3.makeMessageType(
     { no: 6, name: "content_type", kind: "scalar", T: 9 /* ScalarType.STRING */ },
     { no: 7, name: "content_text", kind: "scalar", T: 9 /* ScalarType.STRING */ },
     { no: 8, name: "content_data", kind: "message", T: Struct },
+  ],
+);
+
+/**
+ * *
+ * General way to handle pagination in all listing resources.
+ *
+ * @generated from message onehub.v1.Pagination
+ */
+export const Pagination = /*@__PURE__*/ proto3.makeMessageType(
+  "onehub.v1.Pagination",
+  () => [
+    { no: 1, name: "page_key", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 2, name: "page_size", kind: "scalar", T: 5 /* ScalarType.INT32 */ },
+  ],
+);
+
+/**
+ * *
+ * Standard way to pass pagination related responses, eg the next page key
+ * that can be passed on a paginated request to get the "next page" of results.
+ *
+ * @generated from message onehub.v1.PaginationResponse
+ */
+export const PaginationResponse = /*@__PURE__*/ proto3.makeMessageType(
+  "onehub.v1.PaginationResponse",
+  () => [
+    { no: 1, name: "next_page_key", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 2, name: "has_more_results", kind: "scalar", T: 8 /* ScalarType.BOOL */ },
+    { no: 3, name: "total_num_results", kind: "scalar", T: 5 /* ScalarType.INT32 */ },
   ],
 );
 
